--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
-click
-colorama
-Flask
-importlib-metadata
-itsdangerous
-Jinja2
-MarkupSafe
-Werkzeug
-zipp
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.3
+Flask-Cors==3.0.10
+importlib-metadata==6.4.1
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+six==1.16.0
+Werkzeug==2.2.3
+zipp==3.15.0
